--- a/resources/CSS/style.css
+++ b/resources/CSS/style.css
@@ -151,6 +151,10 @@ footer {
 }
 
 @media screen and (max-width: 480px) {
+    body {
+        background-color: black;
+    }
+    
     header {
         font-size: 1rem;
     }
