--- a/resources/CSS/style.css
+++ b/resources/CSS/style.css
@@ -142,6 +142,7 @@ footer {
     font-size: 1.5rem;
     position: fixed;
     bottom: 0;
+    width: 100%;
 }
 
 @media screen and (max-width: 480px) {
