--- a/resources/CSS/style.css
+++ b/resources/CSS/style.css
@@ -140,7 +140,7 @@ footer {
     max-width:100%;
     opacity: 0.9;
     font-size: 1.5rem;
-    position: fixed;
+    position: absolute;
     bottom: 0;
     width: 100%;
 }
