--- a/resources/CSS/style.css
+++ b/resources/CSS/style.css
@@ -141,6 +141,7 @@ footer {
     opacity: 0.9;
     font-size: 1.5rem;
     bottom: 0;
+    width: 100%;
 }
 
 @media screen and (max-width: 480px) {
